--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<form>
 		<input type="text" id ="name" placeholder ="Name"/>
 		<br>
-		<input type="text" id ="number" placeholder ="Phone Number"/>
+		<input type="text" id ="phone" placeholder ="Phone Number"/>
 		<br>
 		<input type="text" id ="address" placeholder ="Address"/>
 		<br>
@@ -22,7 +22,7 @@
 			<option>Pug</option>
 		</select>
 		<br>
-		<input type="submit" id="submit" value ="submit"/>
+		<input type="submit" id="submit" value ="Submit"/>
 	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
